[package]
name = "pacemaker"
version = "0.1.0"
edition = "2021"

[[test]]
name = "integration"
harness = false

[dependencies]
mantra-rust-macros = { version = "0.6.1", features = ["defmt"] }
cortex-m = { version = "0.7.0", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.0"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
xmc4700 = { version = "0.12.0", features = ["rt"]}
xmc4-hal = { version = "0.5.5", features = ["xmc4700"]}
critical-section = "1.1.2"

[dev-dependencies]
defmt-test = "0.3.2"
